# AIPhotoKey

./: .gitignore  AGENTS.md  README.md  project.yml
AIPhotoKey/: AIPhotoKeyApp.swift  ContentView.swift
AIPhotoKey.xcodeproj/: project.pbxproj
AIPhotoKey/Models/: AIModel.swift  DetectionResult.swift  Extensions.swift  ModelManager.swift  ObjectDetector.swift  PhotoDetailModel.swift  PhotoScanner.swift  PlaceholderDetector.swift  ScanResult.swift  ScanState.swift  SessionPreferences.swift
AIPhotoKey/ViewModels/: ResultsViewModel.swift
AIPhotoKey/Views/: ContentView.swift  ModelCard.swift  ModelSelectionView.swift  ModelSelectionWindow.swift  PhotoDetailView.swift  ResultsView.swift  StatusLineView.swift
AIPhotoKeyTests/: AIPhotoKeyTests.swift
AIPhotoKeyUITests/: AIPhotoKeyUITests.swift  AIPhotoKeyUITestsLaunchTests.swift
Sources/: AIPhotoKeyApp.swift  ContentView.swift  Info.plist  ModelSelectionView.swift  PhotoPreviewView.swift  PhotoScanner.swift  ResultsView.swift  SessionPreferences.swift
Sources/Models/: AIModel.swift  Extensions.swift  ModelManager.swift  PhotoDetailModel.swift  ScanState.swift  SessionPreferences.swift
Sources/ViewModels/: ResultsViewModel.swift
Sources/Views/: ConfidenceSliderView.swift  ContentView.swift  FolderPicker.swift  (+10 more)
backend/: pyproject.toml
backend/app/: captioning.py  catalog.py  config.py  database.py  image_loader.py  main.py  models.py
backend/app/detectors/: base.py  factory.py  fallback.py  ultralytics_detector.py
backend/tests/: test_catalog.py
frontend/: index.html  package-lock.json  package.json
(+5 files in other folders)
